feat(repl-like): animate only typing commands not user@localhost

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
         <link rel="preload stylesheet" href="./main.css">
     </head>
     <body>
-        <div class="typing">
-            <span class="text-secondary">nonezerone@devnull </span>
-            <span class="text-background">~ </span>
-            <span class="cursor">$ </span>
-            <span class="command">./about_me </span>
-            <span class="flag">--help</span>
+        <div>
+            <div class="repl">
+                <span class="text-secondary">nonezerone@devnull </span>
+                <span class="text-background">~ </span>
+                <span class="cursor">$ </span>
+            </div>
+            <div class="repl typing">
+                <span class="command">./about_me </span>
+                <span class="flag">--help</span>
+            </div>
         </div>
         <section class="output">
             <ul class="links">
@@ -56,7 +60,7 @@
                 <span class="command">./about_me </span>
                 <span class="flag">--version</span>
             </div>
-            <h3>0.0.1</h3>
+            <h3>0.0.2</h3>
         </section>
     </body>
 </html>
