feat(font-preload): try preload & swap tactic

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>nonezerone</title>
-        <link rel="preload stylesheet" href="./main.css">
+        <link rel="preload" href="assets/fonts/VT323.woff2" as="font" type="font/woff2">
+        <link rel="stylesheet" href="./main.css">
     </head>
     <body>
         <div>
