test(preload): test

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>nonezerone</title>
-        <!-- <link rel="preload" href="assets/fonts/VT323.woff2" as="font" type="font/woff2"> -->
+        <link rel="preload" href="assets/fonts/VT323.woff2" as="font" type="font/woff2">
         <style>
              @font-face {
                  font-family: "VT323";
