feat(font-delivery): another way to deliver font + fix typo

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>nonezerone</title>
-        <link rel="preload" href="assets/fonts/VT323.woff2" as="font" type="font/woff2" crossorigin />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet preload" href="https://fonts.googleapis.com/css2?family=VT323&display=swap">
+        <!-- <link rel="preload" href="assets/fonts/VT323.woff2" as="font" type="font/woff2" crossorigin /> -->
         <style>
-             @font-face {
+             /* @font-face {
                  font-family: "VT323";
                  src: url("assets/fonts/VT323.woff2") format("woff2");
                  font-display: swap;
-             }
+             } */
 
              * {
                  font-family: "VT323", monospace;
@@ -177,7 +180,7 @@
                 Also checking out <span class="python">Python</span> and <span class="go">Go</span> these days.
             </p>
             <p>
-                My goal is to obtian grasp on the essence of being a web developer while having fun and experimenting with all sorts of technologies.<br>
+                My goal is to obtain grasp on the essence of being a web developer while having fun and experimenting with all sorts of technologies.<br>
                 And (hopefully) build something meaningful and impactful one day.
             </p>
 
